# universal-led-strip-driver-board

sw/: .gitignore  CMakeLists.txt  hal.c  hal.h  input.c  input.h  main.c  uart.c  uart.h
